# Rose

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  clean.ps1  clean.sh  rustfmt.toml
axum_learn/: Cargo.toml
axum_learn/src/: config.rs  main.rs
axum_learn/src/api/: user.rs
axum_learn/src/config/: config.rs  database_manager.rs
axum_learn/src/models/: user.rs
axum_learn/src/schemas/: user.rs
axum_learn/src/utils/: api_response.rs
docs/: Rust.md
rust/: Cargo.toml
rust/src/: mod.rs
src/: lib.rs  main.rs
tests/: test_Ahri.rs
